--- a/BakeryOrder/Views/Home/Index.cshtml
+++ b/BakeryOrder/Views/Home/Index.cshtml
@@ -1,15 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>My To-Do List!</title>
-    <link 
-      rel="stylesheet" 
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" 
-      crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Welcome Vendors!</h1>
-  </body>
-</html>
+@{
+  Layout = "_Layout";
+}
+<div class="container">
+  <h1>Bonjour Pierre</h1>
+  <br>
+  <h3><a href='/vendors'>View Vendors</a></h3>
+  <br>
+  <h3><a href='/vendors/new'>Add New Vendor</a></h3>
+</div>
