add vendor route logic for order form and WIP for vendor cshtml

--- a/BakeryOrder/Views/Order/Show.cshtml
+++ b/BakeryOrder/Views/Order/Show.cshtml
@@ -8,7 +8,7 @@
   <h2>Vendor: @Model["vendor"].Name</h2>
   <h3>@Model["order"].Title</h3>
   <h3>Order Date: @Model["order"].Date</h3>
-  <h3>Order Total: $@Mode["order"].Price</h3>
+  <h3>Order Total: $@Model["order"].Price</h3>
   <p>Order Notes: @Model["order"].Description</p>
 
   <a href='/'>Home</a>
