add rename to some project files to fix routes, and add fix to route links

--- a/BakeryOrder/Views/Orders/New.cshtml
+++ b/BakeryOrder/Views/Orders/New.cshtml
@@ -10,27 +10,33 @@
     <h2>Bread:</h2>
     <input type="number" id="bread-01" name="bread-01" min="0" max="50" value=0>
     <label for="bread-01">Sourdough</label>
+    <br>
     <input type="number" id="bread-02" name="bread-02" min="0" max="50" value=0>
     <label for="bread-02">Baguette</label>
+    <br>
     <input type="number" id="bread-03" name="bread-03" min="0" max="50" value=0>
     <label for="bread-03">Ciabatta</label>
+    <br>
     <input type="number" id="bread-04" name="bread-04" min="0" max="50" value=0>
     <label for="bread-04">Rye</label>
     <hr>
     <h2>Pastry:</h2>
     <input type="number" id="pastry-01" name="pastry-01" min="0" max="50" value=0>
     <label for="pastry-01">Kringle</label>
+    <br>
     <input type="number" id="pastry-02" name="pasrty-02" min="0" max="50" value=0>
     <label for="pastry-02">Eclair</label>
+    <br>
     <input type="number" id="pastry-03" name="pastry-03" min="0" max="50" value=0>
     <label for="pastry-03">Danish</label>
+    <br>
     <input type="number" id="pastry-04" name="pastry-04" min="0" max="50" value=0>
     <label for="pastry-04">Cannoli</label>
-
+    <hr>
     <label for="orderDescription">Order Description</label>
     <input id="orderDescription" name="orderDescription" type="text">
     <label for="orderDate">Order Date:</label>
-    <input type="date" id="orderDate" name="orderDate">
+    <input id="orderDate" name="orderDate" type="text">
     <button type="submit">Add Order</button>
   </form>
 </div>
